--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             <div class="p-4 border-t border-gray-200 bg-white">
                 <div class="flex flex-col gap-2">
                     <div class="flex justify-between font-bold">
+                        <span>Cantidad de productos:</span>
+                        <span id="cart-product-count">0</span>
+                    </div>
+                    <div class="flex justify-between font-bold">
                         <span>Total Bs.</span>
                         <span id="cart-total-bs">0.00</span>
                     </div>
