--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                         <span>Total USD</span>
                         <span id="cart-total-usd">0.00</span>
                     </div>
-                    <button id="checkout-button" class="w-full bg-green-500 text-white rounded-lg py-2">Proceder a Pagar</button>
+                    <button id="checkout-button" class="w-full bg-green-500 hover:bg-green-600 transition-colors text-white rounded-full py-3 text-lg font-semibold shadow-md flex items-center justify-center gap-2">
+                        <i data-lucide="credit-card" class="w-5 h-5"></i>
+                        Proceder a Pagar
+                    </button>
                 </div>
             </div>
         </div>
@@ -92,7 +95,10 @@
         </div>
         <div class="flex items-center">
             <span class="font-bold text-lg">Bs. <span id="cart-preview-total">0.00</span></span>
-            <button id="open-cart-preview" class="ml-4 bg-blue-500 text-white rounded-full px-4 py-2">Ver carrito</button>
+            <button id="open-cart-preview" class="ml-4 bg-blue-500 hover:bg-blue-600 transition-colors text-white rounded-full px-6 py-2 text-base font-semibold shadow-md flex items-center gap-2">
+                <i data-lucide="arrow-right-circle" class="w-5 h-5"></i>
+                Ver carrito
+            </button>
         </div>
     </div>
 
