--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <span>Total USD</span>
                         <span id="cart-total-usd">0.00</span>
                     </div>
+                    <div id="cart-change-info" class="flex flex-col text-xs text-gray-700 mt-1"></div>
                     <button id="checkout-button" class="w-full bg-green-500 hover:bg-green-600 transition-colors text-white rounded-full py-3 text-lg font-semibold shadow-md flex items-center justify-center gap-2">
                         <i data-lucide="credit-card" class="w-5 h-5"></i>
                         Proceder a Pagar
