--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color" content="#4CAF50">
+    <link rel="icon" href="icon-192.png" sizes="192x192">
 </head>
 <body class="bg-gray-100">
-    <div id="app" class="container mx-auto p-4">
+        <div id="app" class="container mx-auto p-4">
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', function() {
+                    navigator.serviceWorker.register('service-worker.js');
+                });
+            }
+        </script>
         <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-10 p-4">
             <div class="container mx-auto flex justify-between items-center">
                 <div class="flex items-center">
