--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#4CAF50">
     <link rel="icon" href="icon-192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="icon-512.png.png" sizes="512x512">
 </head>
 <body class="bg-gray-100">
         <div id="app" class="container mx-auto p-4">
