--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                         <span id="cart-product-count">0</span>
                     </div>
                     <div class="flex justify-between font-bold">
+                        <span>Productos totales:</span>
+                        <span id="cart-total-products">0</span>
+                    </div>
+                    <div class="flex justify-between font-bold">
                         <span>Total Bs.</span>
                         <span id="cart-total-bs">0.00</span>
                     </div>
