--- a/index.html
+++ b/index.html
@@ -64,18 +64,19 @@
         </div>
 
         <div id="cart-sidebar" class="fixed top-0 right-0 h-full bg-white shadow-lg w-80 transform translate-x-full transition-transform duration-300 z-20 flex flex-col">
-            <div class="p-4 flex-1 flex flex-col" style="padding-bottom:100px;">
-                <div class="flex justify-between items-center">
-                    <h2 class="text-2xl font-bold">Carrito</h2>
-                    <button id="close-cart">
-                        <i data-lucide="x" class="w-6 h-6"></i>
-                    </button>
-                </div>
-                <div id="cart-items" class="mt-4 space-y-2 flex-1 overflow-y-auto">
-                    <!-- Los productos del carrito se insertarán aquí -->
-                </div>
+            
+            <div class="p-4 flex justify-between items-center border-b">
+                <h2 class="text-2xl font-bold">Carrito</h2>
+                <button id="close-cart">
+                    <i data-lucide="x" class="w-6 h-6"></i>
+                </button>
             </div>
-            <div class="p-4 border-t border-gray-200 bg-white">
+
+            <div id="cart-items" class="flex-1 p-4 space-y-2 overflow-y-auto">
+                <!-- Los productos del carrito se insertarán aquí -->
+            </div>
+
+            <div id="cart-totals-footer" class="p-4 border-t border-gray-200 bg-white">
                 <div class="flex flex-col gap-2">
                     <div class="flex justify-between font-bold">
                         <span>Cantidad de productos:</span>
@@ -98,6 +99,9 @@
                         <i data-lucide="credit-card" class="w-5 h-5"></i>
                         Proceder a Pagar
                     </button>
+                </div>
+            </div>
+        </div>
                 </div>
             </div>
         </div>
