--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             
             <div class="p-4 flex justify-between items-center border-b">
                 <h2 class="text-2xl font-bold">Carrito</h2>
-                <button id="close-cart">
-                    <i class="bi bi-x-lg text-xl"></i>
+                <button id="close-cart" style="display:flex;align-items:center;justify-content:center;width:2.5rem;height:2.5rem;">
+                    <i class="bi bi-x-lg" style="font-size:1.5rem;line-height:1;display:flex;align-items:center;justify-content:center;margin:auto;"></i>
                 </button>
             </div>
 
