--- a/index.html
+++ b/index.html
@@ -16,12 +16,36 @@
 <body class="bg-gray-100">
         <div id="app" class="container mx-auto p-4">
         <script>
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('service-worker.js');
-                });
-            }
-        </script>
+                if ('serviceWorker' in navigator) {
+                    // Register service worker and handle updates gracefully
+                    window.addEventListener('load', function() {
+                        navigator.serviceWorker.register('service-worker.js').then(reg => {
+                            // When a new SW is found
+                            reg.addEventListener('updatefound', () => {
+                                const newWorker = reg.installing;
+                                if (!newWorker) return;
+                                newWorker.addEventListener('statechange', () => {
+                                    if (newWorker.state === 'installed') {
+                                        // If there's an existing controller, that means there's an update available
+                                        if (navigator.serviceWorker.controller) {
+                                            // Tell the SW to skipWaiting so it activates immediately
+                                            newWorker.postMessage({ type: 'SKIP_WAITING' });
+                                        }
+                                    }
+                                });
+                            });
+
+                            // When the new SW takes control, reload to apply changes
+                            let refreshing = false;
+                            navigator.serviceWorker.addEventListener('controllerchange', () => {
+                                if (refreshing) return;
+                                refreshing = true;
+                                window.location.reload();
+                            });
+                        }).catch(err => console.error('SW registration failed:', err));
+                    });
+                }
+            </script>
         <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-10 p-4">
             <div class="container mx-auto flex justify-between items-center">
                 <div class="flex items-center">
